--- a/pagina2.html
+++ b/pagina2.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Página 2</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page" id="page2">
+        <h1>Página em Branco</h1>
+        <p>Esta página está vazia.</p>
+        <a href="index.html">Voltar para Página 1</a>
+    </div>
+</body>
+</html>
