--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Meu Site Simples</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page" id="page1">
+        <h1>Minha Foto</h1>
+        <div class="photo-space">
+            <!-- Coloque sua foto aqui -->
+            <img src="foto.jpg" alt="Minha Foto">
+        </div>
+        <a href="pagina2.html">Ir para Página 2</a>
+    </div>
+</body>
+</html>
