--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Minha Foto</h1>
         <div class="photo-space">
             <!-- Coloque sua foto aqui -->
-            <img src="foto.jpg" alt="Minha Foto">
+            <img src=eumsm.jpg" alt="Minha Foto">
         </div>
         <a href="pagina2.html">Ir para Página 2</a>
     </div>
